--- a/Text.css
+++ b/Text.css
@@ -1,6 +1,12 @@
-p {
-    background-color: powderblue;
-    color: palegoldenrod;
+b {
+    color: blue;
+
+}
+
+BioSize{
+    
+    font-size: 24;
+    
 }
 
 
@@ -11,24 +17,23 @@ p {
 }
 
 
-text-size1{
-    
+.graysquare{
+    position: absolute;
+    bottom: 120px;
+    left: 670;   
     font-size: 40;
     color: greenyellow;
 }
 
-text-size1{
-    
-    font-size: 40;
-    color: greenyellow;
-}
+
 .redsquare {
     position: absolute;
-    bottom: 160px;
+    bottom: 120px;
     left: 180px;   
+    font-size: 40;
+    color: greenyellow;
     
 }
-
 
 .greensquare{
     position: absolute;
